--- a/src/jspreadsheet.css
+++ b/src/jspreadsheet.css
@@ -168,6 +168,7 @@
     font-size: inherit;
     line-height: inherit;
     padding: 4px !important;
+    resize: none !important;
 }
 
 .jss_worksheet > tbody > tr.dragging > td {
